added new images to the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -82,55 +82,55 @@
     <div class="gallery">
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-09-37.png"
+          src="./asset/image/after hours.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-09-51.png"
+          src="./asset/image/dear melancholy.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-01.png"
+          src="./asset/image/dertogada.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-08.png"
+          src="./asset/image/endgame.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-20.png"
+          src="./asset/image/fikr eskemeqabr.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-27.png"
+          src="./asset/image/final call.png"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-37.png"
+          src="./asset/image/starboy.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-44.png"
+          src="./asset/image/tedy001.jpg"
           alt=""
         />
       </div>
       <div class="photos">
         <img
-          src="./asset/image/Screenshot from 2020-03-10 16-10-53.png"
+          src="./asset/image/12 monkeys0001.jpg"
           alt=""
         />
       </div>
